--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Water Balance Tracker</string>
+
+<!--    Login screen    -->
+    <string name="login_email">Email</string>
+    <string name="login_password">Password</string>
+    <string name="login_signIn">Sign in</string>
+    <string name="login_signUp">Sign up</string>
+    <string name="login_registrationIn">Register in</string>
+    <string name="login_loginTo">Login to</string>
 </resources>
