--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,7 @@
     <string name="text_save">Save</string>
     <string name="text_add">Add</string>
     <string name="text_beverages">Beverages</string>
+    <string name="rate_perfect">Perfect</string>
+    <string name="rete_successMessage">You did an excellent job and reached your daily water intake goal. Maintaining water balance is an important step toward good health and well-being. Keep up the great work!</string>
 
 </resources>
